--- a/src/index.html
+++ b/src/index.html
@@ -6,12 +6,12 @@
 
     <body class="bg-white text-black">
         <header class="block md:hidden">
-            <include src="./partials/nav.html" locals='{"pathPrefix": "./html", "active": ""}'></include>
+            <include src="./partials/nav.html" locals='{"pathPrefix": "./html", "active": "/"}'></include>
         </header>
 
         <div class="flex flex-col-reverse items-center justify-start md:flex-row">
             <div class="hidden md:block md:w-20"></div>
-            <div class="relative aspect-2/3 h-screen">
+            <div class="relative aspect-2/3 w-full md:h-screen">
                 <img src="../public/images/Zaninelli_Jakobs_BROTHERLAND_01.jpg" class="object-cover" />
             </div>
 
