--- a/src/html/project.html
+++ b/src/html/project.html
@@ -12,7 +12,7 @@
         <main class="mb-24 flex flex-col items-center justify-start font-crimson-text text-lg font-semibold tracking-tight">
             <!-- 1. -->
             <div class="mb-6 flex flex-col items-center justify-between md:flex-row">
-                <div class="w-full text-justify md:w-1/2 md:pr-4 lg:pr-8">
+                <div class="w-full text-left md:w-1/2 md:pr-4 lg:pr-8">
                     <p>
                         Brotherland berichtet von einer Zeit, von der man schwer erzählen kann, ohne den Rassismus und die Gewalt sprachlich
                         zu reproduzieren.
@@ -57,7 +57,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="mb-4 w-fit text-justify md:mb-0 md:pl-4 lg:pl-8">
+                <div class="mb-4 w-fit text-left md:mb-0 md:pl-4 lg:pl-8">
                     <p>
                         Am 9. November 1989 fällt die Berliner Mauer, ein Jahr später wird Deutschland wiedervereinigt. Für viele ein Fest,
                         die Errungenschaft der Freiheit, die Verwirklichung von etwas lang Erträumtem. Für andere der Beginn einer Zeit,
@@ -78,7 +78,7 @@
             </div>
             <!-- 3. -->
             <div class="mb-6 flex flex-col items-center justify-between md:flex-row">
-                <div class="mb-4 w-fit text-justify md:mb-0 md:pr-4 lg:pr-8">
+                <div class="mb-4 w-fit text-left md:mb-0 md:pr-4 lg:pr-8">
                     <p>
                         Die „Ausländer raus“-Gewalt nach der Wende begann nicht erst 1992 mit dem Pogrom in Rostock-Lichtenhagen und den
                         Brandanschlägen 1993 in Mölln und Solingen. Bereits 1991 wurden in Hoyerswerda tagelang ein Wohnheim für
