--- a/src/html/virtual-exhibits/ve3.html
+++ b/src/html/virtual-exhibits/ve3.html
@@ -91,7 +91,7 @@
 
                 <div class="relative h-fit w-full pt-24">
                     <div class="w-4/5 -translate-x-[10%]">
-                        <span class="z-20 text-justify font-roboto text-7xl font-medium text-red-700"
+                        <span class="z-20 text-left font-roboto text-7xl font-medium text-red-700"
                             >DIE NEUE GRENZE WAR NICHT MEHR DIE MAUER, ES WAR DAS GELD</span
                         >
 
