--- a/src/html/about.html
+++ b/src/html/about.html
@@ -14,9 +14,9 @@
                 class="flex h-full w-full flex-col flex-wrap items-start justify-between font-crimson-text text-lg font-semibold tracking-tight md:flex-row"
             >
                 <div class="flex h-fit w-full flex-col justify-start md:order-2 md:w-1/2 md:pr-6">
-                    <p class="text-justify text-red-800">Brotherland ist ein Projekt von Martina Zaninelli und Thomas Jakobs</p>
+                    <p class="text-left text-red-800">Brotherland ist ein Projekt von Martina Zaninelli und Thomas Jakobs</p>
 
-                    <p class="text-justify text-red-800 underline">Ausstellungen und Nominierungen</p>
+                    <p class="text-left text-red-800 underline">Ausstellungen und Nominierungen</p>
                     <div class="h-4"></div>
 
                     <div>2023 – Photomatch, Fotofestiwal – Lodz, PL</div>
@@ -42,7 +42,7 @@
                     <span><a href="mailto:brotherland@riseup.net">brotherland@riseup.net</a></span>
                     <div class="h-4"></div>
 
-                    <p class="text-justify text-red-800 underline">Biografien</p>
+                    <p class="text-left text-red-800 underline">Biografien</p>
                     <p>
                         Martina macht die Fotos, Thomas stellt die Fragen. Gemeinsam haben sie Brotherland konzipiert und arbeiten seit über
                         zwei Jahren daran. Martina ist in Italien geboren und aufgewachsen. Thomas ist in einem Staat geboren und
