gallery touch bugs fixed, nav text scalable

--- a/src/html/exhibits.html
+++ b/src/html/exhibits.html
@@ -12,7 +12,7 @@
         <main class="m-auto mb-24">
             <div
                 id="simplelightboxgallery"
-                class="gallery grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6 [&>*]:my-auto"
+                class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-4 xl:grid-cols-5 2xl:grid-cols-6 [&>*]:my-auto"
             >
                 <a href="/public/images/exhibits/Zaninelli_Jakobs_BROTHERLAND_exhibition_01.jpg"
                     ><img
