--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
         <div class="flex flex-col-reverse items-center justify-start md:flex-row">
             <div class="hidden md:block md:w-20"></div>
-            <div class="relative aspect-2/3 w-full md:h-screen">
+            <div class="relative aspect-2/3 md:h-screen">
                 <img src="../public/images/Zaninelli_Jakobs_BROTHERLAND_01.jpg" class="object-cover" />
             </div>
 
