--- a/src/html/about.html
+++ b/src/html/about.html
@@ -13,7 +13,7 @@
             <div
                 class="flex h-full w-full flex-col flex-wrap items-start justify-between font-crimson-text text-lg font-semibold tracking-tight md:flex-row"
             >
-                <div class="flex h-fit w-full flex-col justify-start md:order-2 md:w-1/2 md:pr-6">
+                <div class="flex h-fit w-full flex-col justify-start md:w-1/2 md:pr-6">
                     <p class="text-left text-red-800">Brotherland ist ein Projekt von Martina Zaninelli und Thomas Jakobs</p>
 
                     <p class="text-left text-red-800 underline">Ausstellungen und Nominierungen</p>
@@ -37,7 +37,7 @@
                     <div>2021 – Landscapes of the Futures, Castelnuovo Fotografia – Castelnuovo di Porto, Rom, IT</div>
                 </div>
 
-                <div class="h-fit w-full md:order-1 md:w-1/2 md:pl-6">
+                <div class="h-fit w-full pt-4 md:order-1 md:w-1/2 md:pl-6 md:pt-0">
                     <p class="text-red-800 underline">Kontakt</p>
                     <span><a href="mailto:brotherland@riseup.net">brotherland@riseup.net</a></span>
                     <div class="h-4"></div>
@@ -55,7 +55,7 @@
                     </p>
                 </div>
 
-                <div class="mt-4 flex w-full md:order-last">
+                <div class="mt-8 flex w-full md:order-last md:mt-4 md:pl-12">
                     <div class="ml-auto w-full md:w-1/2">
                         <div>Die Realisierung der Webseite wurde ermöglicht dank der Förderung der</div>
                         <!-- AAS -->
