--- a/src/html/virtual-exhibits/ve2.html
+++ b/src/html/virtual-exhibits/ve2.html
@@ -23,23 +23,25 @@
                 ></a>
             </div>
 
-            <main class="mb-44 flex flex-col font-crimson-text text-xl font-bold tracking-tight">
-                <div class="relative flex h-fit w-full">
-                    <div class="relative flex min-h-min basis-1/2 flex-col items-start justify-center pr-20">
+            <main class="mb-44 flex flex-col font-crimson-text text-lg font-bold tracking-tight md:text-xl">
+                <div class="relative mx-auto block h-fit w-full md:mx-0 md:flex">
+                    <div
+                        class="relative mx-auto flex min-h-min w-4/5 basis-1/2 flex-col items-start justify-center md:mx-0 md:w-auto md:pr-20"
+                    >
                         <span class="text-left">
                             Es wirkt so, als ob die DDR nur Show gemacht hätte mit dem Thema Solidarität. Wir sind so erzogen worden in der
                             Schule, aber wenn du es im Nachhinein betrachtest, war überhaupt gar kein Kontakt gewollt mit den Ausländern.
                         </span>
 
                         <!-- Audio -->
-                        <div class="mx-auto w-3/5">
+                        <div class="mx-auto w-4/5 md:w-3/5">
                             <include
                                 src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/01_J_R_01.mp3", "title": ""}'
                             ></include>
                         </div>
                     </div>
-                    <div class="ml-1 mr-4 flex min-h-min basis-1/2 flex-col">
+                    <div class="flex min-h-min w-full flex-col md:ml-1 md:mr-4 md:w-auto md:basis-1/2">
                         <!-- Plattenbauten Hoch -->
                         <div class="relative aspect-3/2 w-full">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_06.jpg" />
@@ -53,15 +55,15 @@
                     </div>
                 </div>
 
-                <div class="flex h-fit -translate-y-[7.5%]">
-                    <div class="flex w-1/2 flex-col items-center justify-between pr-16">
+                <div class="flex h-fit flex-col pt-8 md:-translate-y-[7.5%] md:flex-row md:pt-0">
+                    <div class="flex w-full flex-col items-center justify-between md:w-1/2 md:pr-16">
                         <!-- Hausecke; türkise Fenster -->
-                        <div class="relative aspect-2/3 w-full rounded-sm">
+                        <div class="relative aspect-2/3 w-4/5 md:w-full">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_08.jpg" />
                         </div>
 
                         <!-- Audio "Die kannten keine Schwarzen" -->
-                        <div class="mx-auto w-4/5 pb-24">
+                        <div class="mx-auto w-3/5 pt-4 md:w-4/5 md:pb-24 md:pt-0">
                             <include
                                 src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/02_die_kannten_keine_Schwarzen.mp3", "title": "die kannten keine Schwarzen"}'
@@ -69,22 +71,22 @@
                             </include>
                         </div>
                     </div>
-                    <div class="flex w-1/2 flex-col justify-end pt-96">
+                    <div class="mx-auto flex w-4/5 flex-col justify-end md:mx-0 md:w-1/2 md:pt-96">
                         <!-- Feuerzeug -->
-                        <div class="ml-auto aspect-2/3 w-4/5 overflow-hidden rounded-sm">
+                        <div class="ml-auto aspect-2/3 w-full overflow-hidden md:w-4/5">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_09.jpg" />
                         </div>
                     </div>
                 </div>
 
-                <div class="flex">
-                    <div class="w-2/3 pr-8">
+                <div class="mt-8 flex flex-col md:mt-0 md:flex-row">
+                    <div class="w-full pr-0 md:w-2/3 md:pr-8">
                         <!-- Nahaufnahme Interviewpartner -->
-                        <div class="aspect-2/3 w-full">
+                        <div class="mx-auto aspect-2/3 w-4/5 md:mx-0 md:w-full">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_010.jpg" />
                         </div>
                     </div>
-                    <div class="mt-auto w-1/3 translate-y-1/2">
+                    <div class="mx-auto mt-auto w-4/5 pt-4 md:mx-0 md:w-1/3 md:translate-y-1/2 md:pt-0">
                         <!-- Text "Damals in der DDR hat man.."  -->
                         <span>
                             Damals in der DDR hat man gesagt, es gäbe keine Rassendiskriminierung. Aber für uns gab es die. Wenn wir in die
@@ -95,8 +97,8 @@
                     </div>
                 </div>
 
-                <div class="relative flex justify-between pt-60">
-                    <div class="flex w-6/12 flex-col justify-between pr-20">
+                <div class="relative flex flex-col justify-between pt-8 md:flex-row md:pt-60">
+                    <div class="flex w-full flex-col justify-between md:w-6/12 md:pr-20">
                         <!-- Schwimmbad -->
                         <div class="relative aspect-3/2 w-full">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_011.jpg" />
@@ -104,7 +106,7 @@
                         </div>
 
                         <!-- Audio unterhalb v. Schwimmbad -->
-                        <div class="w-full translate-y-[195%]">
+                        <div class="hidden w-full translate-y-[195%] md:block">
                             <include
                                 src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/04_ein_freundschaftliches_verhältnis.mp3", "title": "ein freundschaftliches Verhältnis"}'
@@ -113,9 +115,9 @@
                         </div>
                     </div>
 
-                    <div class="absolute z-10 w-full translate-y-[200%]">
+                    <div class="z-10 w-full pt-8 md:absolute md:translate-y-[200%] md:pt-0">
                         <!-- Audio zw. Schwimmbad & Datsche -->
-                        <div class="mx-auto w-1/3">
+                        <div class="mx-auto w-3/5 md:w-1/3">
                             <include
                                 src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/03_du_hattest_gar_nicht_die_möglichkeit.mp3", "title": "du hattest gar nicht die Möglichkeit"}'
@@ -124,7 +126,7 @@
                         </div>
                     </div>
 
-                    <div class="w-5/12 translate-y-[30%] pl-4">
+                    <div class="mx-auto w-4/5 pt-4 md:mx-0 md:w-5/12 md:translate-y-[30%] md:pl-4 md:pt-0">
                         <!-- Datsche -->
                         <div class="aspect-2/3 w-full">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_012.jpg" />
@@ -132,34 +134,39 @@
                     </div>
                 </div>
 
-                <div class="relative flex h-fit w-full flex-col pb-20 pt-64">
+                <div class="relative flex h-fit w-full flex-col pb-20 pt-8 md:pt-64">
                     <div class="flex w-full flex-col items-end justify-start">
-                        <div class="w-2/5">
+                        <div class="mx-auto w-4/5 md:mx-0 md:w-2/5">
                             Keiner hat uns die Geschichte von Deutschland erzählt. Dann auf einmal kommt eine Gruppe von Jugendlichen, die
                             sagen sie sind die Nachfolger von Hitler. „Wir repräsentieren Hitler und Hitler hat die Menschen wie euch nicht
                             gemocht“.
-
-                            <span class="block pt-4">„Warum?“</span>
+                            <p>„Warum?“</p>
                         </div>
-                        <div class="w-full text-right">
+                        <div class="mx-auto w-[90%] text-left md:mx-0 md:w-full md:text-right">
                             <span
-                                class="whitespace-nowrap font-roboto text-[6vw] font-medium leading-snug text-red-700 sm:text-[7.25vw] md:text-[6vw] lg:text-[5.375vw] xl:text-[4.9vw] 2xl:text-[4.45vw]"
+                                class="font-roboto text-7xl font-medium leading-none text-red-700 md:whitespace-nowrap md:text-[6vw] md:leading-snug lg:text-[5.375vw] xl:text-[4.9vw] 2xl:text-[4.45vw]"
                             >
                                 WEIL DU SCHWARZ BIST
                             </span>
                         </div>
-                        <span class="block w-2/5">Wir hatten Angst.</span>
-                        <span class="block w-2/5">Das war in Berlin 1982-1983.</span>
+                        <span class="mx-auto block w-4/5 md:mx-0 md:w-2/5">Wir hatten Angst.</span>
+                        <span class="mx-auto block w-4/5 md:mx-0 md:w-2/5">Das war in Berlin 1982-1983.</span>
                     </div>
 
-                    <div class="-z-10 w-3/5 pr-12">
+                    <div class="-z-10 mx-auto w-4/5 pt-4 md:mx-0 md:w-3/5 md:pr-12 md:pt-0">
                         <!-- Baum -->
-                        <div class="aspect-2/3 w-full -translate-y-[13%]">
+                        <div class="aspect-2/3 w-full md:-translate-y-[13%]">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_013.jpg" />
                         </div>
                     </div>
                 </div>
                 <br />
+
+                <div class="-mx-0.5 flex items-center justify-end md:hidden">
+                    <a class="text-center font-crimson-text tracking-tight text-gray-100" href="./ve3.html">
+                        <div class="flex h-32 w-32 items-center justify-between rounded-full bg-gray-950 p-4">zur nächsten Seite</div>
+                    </a>
+                </div>
             </main>
         </div>
     </body>
