--- a/src/html/book.html
+++ b/src/html/book.html
@@ -9,9 +9,9 @@
             <include src="./partials/nav.html" locals='{"pathPrefix": "./", "active": "book"}'></include>
         </header>
 
-        <main class="m-auto font-crimson-text font-semibold text-lg tracking-tight">
+        <main class="m-auto font-crimson-text text-lg font-semibold tracking-tight">
             <div class="flex flex-col items-center justify-start">
-                <img src="/public/images/loading.jpg?width=400" class="h-fit w-80" />
+                <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_buch.jpg" class="h-fit w-80" />
                 <div>Ein Foto-Text-Buch mit mehr Interviews, Fotos und Archivmaterial ist in Arbeit.</div>
             </div>
         </main>
