--- a/src/html/virtual-exhibits/ve3.html
+++ b/src/html/virtual-exhibits/ve3.html
@@ -11,54 +11,56 @@
 
         <div class="relative">
             <!-- Hover links -->
-            <div class="pointer-events-none absolute h-full w-full">
+            <div class="pointer-events-none absolute hidden h-full w-full md:block">
                 <a
-                    class="cursor-ve-prev pointer-events-auto absolute left-0 top-0 z-50 h-full sm:w-[5%] md:w-[7.5%] lg:w-[10%] xl:w-[15%] 2xl:w-1/5"
+                    class="cursor-ve-prev pointer-events-auto absolute left-0 top-0 z-50 h-full md:w-[7.5%] lg:w-[10%] xl:w-[15%] 2xl:w-1/5"
                     href="./ve2.html"
                 ></a>
 
                 <a
-                    class="cursor-ve-next pointer-events-auto absolute right-0 top-0 z-50 h-full sm:w-[5%] md:w-[7.5%] lg:w-[10%] xl:w-[15%] 2xl:w-1/5"
+                    class="cursor-ve-next pointer-events-auto absolute right-0 top-0 z-50 h-full md:w-[7.5%] lg:w-[10%] xl:w-[15%] 2xl:w-1/5"
                     href="./ve4.html"
                 ></a>
             </div>
 
-            <main class="mb-32 flex flex-col font-crimson-text text-xl font-bold tracking-tight">
-                <div class="flex h-fit w-full">
-                    <div class="relative flex h-full basis-1/2 flex-col justify-between pr-1">
+            <main class="mb-32 flex flex-col font-crimson-text text-lg font-bold tracking-tight md:text-xl">
+                <div class="flex h-fit w-full flex-col md:flex-row">
+                    <div class="relative flex h-full w-full flex-col justify-between md:w-auto md:basis-1/2 md:pr-1">
                         <!-- Audio -->
-                        <div class="z-20 flex w-4/5">
+                        <div class="z-20 mx-auto flex w-4/5 md:mx-0">
                             <include
                                 src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/01_wir_wollten_das_ja_letzten_Endes.mp3", "title": "wir wollten das ja letzten endes"}'
                             >
                             </include>
                         </div>
-                        <div class="h-60"></div>
+                        <div class="hidden md:block md:h-60"></div>
                         <!-- Steine -->
-                        <div class="relative z-10 aspect-2/3 w-full translate-x-[7%] overflow-hidden rounded-sm">
-                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_015.jpg" class="absolute h-full w-full object-cover" />
+                        <div
+                            class="relative z-10 mx-auto aspect-2/3 w-4/5 overflow-hidden rounded-sm md:mx-0 md:w-full md:translate-x-[7%]"
+                        >
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_015.jpg" class="h-full w-full object-cover" />
                         </div>
                     </div>
 
-                    <div class="ml-1 mr-4 flex h-fit basis-1/2 flex-col items-center justify-between">
+                    <div class="flex h-fit flex-col items-center justify-between pt-8 md:ml-1 md:mr-4 md:basis-1/2 md:pt-0">
                         <!-- Tauben-->
-                        <div class="relative aspect-2/3 w-full overflow-hidden rounded-sm pt-16">
-                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_014.jpg" class="absolute object-cover" />
+                        <div class="relative mx-auto aspect-2/3 w-4/5 rounded-sm md:mx-0 md:w-full md:pt-16">
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_014.jpg" class="object-cover" />
                         </div>
 
-                        <div class="h-28"></div>
+                        <div class="hidden md:block md:h-28"></div>
 
-                        <div class="w-4/5 translate-x-[15%]">
+                        <div class="w-4/5 pt-8 md:translate-x-[15%] md:pt-0">
                             <!-- Text "Meine Arbeit nehmen die.."  -->
                             <span>
                                 „Meine Arbeit nehmen die mir jetzt weg!“ Da hatte aber niemand mehr Arbeit gehabt, weil alle waren ja
                                 arbeitslos. Die Arbeit gab’s ja gar nicht mehr.
                             </span>
 
-                            <div class="w-full pt-6">
+                            <div class="w-full pt-4 md:pt-6">
                                 <!-- Audio "wir wollten das ja letzten endes" -->
-                                <div class="mx-auto flex w-3/5">
+                                <div class="ml-auto flex w-3/5 md:mx-auto">
                                     <include
                                         src="./partials/interview_audio.html"
                                         locals='{"audioFilePath": "../../../public/audio/02_A_D_03.mp3", "title": ""}'
@@ -70,10 +72,10 @@
                     </div>
                 </div>
 
-                <div class="flex h-fit pt-24">
-                    <div class="flex w-1/3 flex-col justify-center">
+                <div class="flex h-fit flex-col md:flex-row md:pt-24">
+                    <div class="mx-auto flex w-2/3 flex-col justify-center md:mx-0 md:w-1/3">
                         <!-- Audio "der Rassismus wurde noch stärker" -->
-                        <div class="flex w-full -translate-x-[10%]">
+                        <div class="flex w-full md:-translate-x-[10%]">
                             <include
                                 src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/03_der_rassismus_wurde_noch_stärker.mp3", "title": "der Rassismus wurde noch stärker"}'
@@ -81,16 +83,16 @@
                             </include>
                         </div>
                     </div>
-                    <div class="flex w-2/3 flex-col justify-start">
+                    <div class="mx-auto flex w-4/5 flex-col justify-start md:mx-0 md:w-2/3">
                         <!-- Interviewpartner -->
-                        <div class="relative aspect-2/3 w-full translate-x-[18%] overflow-hidden rounded-sm">
+                        <div class="relative aspect-2/3 w-full overflow-hidden rounded-sm md:translate-x-[18%]">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_016.jpg" class="absolute object-cover" />
                         </div>
                     </div>
                 </div>
 
-                <div class="relative h-fit w-full pt-24">
-                    <div class="w-4/5 -translate-x-[10%]">
+                <div class="relative h-fit w-full md:pt-24">
+                    <div class="w-4/5 md:-translate-x-[10%]">
                         <span class="z-20 text-left font-roboto text-7xl font-medium text-red-700"
                             >DIE NEUE GRENZE WAR NICHT MEHR DIE MAUER, ES WAR DAS GELD</span
                         >
@@ -114,8 +116,8 @@
                     </div>
                 </div>
 
-                <div class="-mx-20 flex h-fit -translate-y-[25%]">
-                    <div class="flex basis-1/2 flex-col justify-between pr-20">
+                <div class="flex h-fit md:-mx-20 md:-translate-y-[25%]">
+                    <div class="flex flex-col justify-between md:basis-1/2 md:pr-20">
                         <!-- Fresse 1 -->
                         <div class="relative aspect-3/2 w-full -translate-y-[40%] overflow-hidden rounded-sm">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_018.jpg" class="object-cover" />
@@ -123,7 +125,7 @@
                         </div>
 
                         <!-- Text "Meine Arbeit nehmen die.."  -->
-                        <span class="w-10/12 translate-x-[20%] translate-y-full">
+                        <span class="w-10/12 md:translate-x-[20%] md:translate-y-full">
                             Dass Deutschland einig wird, das hört man schon '89 … vom Fernsehen und von der Straße, die Deutschen
                             unterhalten sich manchmal. Ich hatte dafür keinen Kopf … Ich war jetzt arbeitslos, ich musste irgendwas
                             versuchen, um weiter Geld zu verdienen. Was ist mit mir jetzt, gehe ich nach Hause [Vietnam] oder gehe ich
@@ -131,7 +133,7 @@
                         </span>
                     </div>
 
-                    <div class="flex basis-1/2 translate-y-[20%] flex-col justify-end pl-20">
+                    <div class="flex flex-col justify-end md:basis-1/2 md:translate-y-[20%] md:pl-20">
                         <!-- Fresse 2 -->
                         <div class="relative aspect-3/2 w-full overflow-hidden rounded-sm">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_019.jpg" class="object-cover" />
