edits to text in index.html etc

--- a/src/html/project.html
+++ b/src/html/project.html
@@ -26,7 +26,11 @@
 
                 <div class="py-8 md:hidden">
                     <a href="virtual-exhibits/ve2.html">
-                        <img src="/public/images/virtAusstCursor.png" width="100%" />
+                        <div
+                            class="flex h-32 w-32 items-center justify-center rounded-full bg-gray-950 p-4 pt-3 text-center font-crimson-text leading-tight tracking-tight text-gray-200 hover:!text-white"
+                        >
+                            zur virtuellen Ausstellung
+                        </div>
                     </a>
                 </div>
 
@@ -36,7 +40,7 @@
                             <a href="virtual-exhibits/ve2.html" class="group">
                                 <img
                                     src="/public/images/Zaninelli_Jakobs_BROTHERLAND_The_Truth_Lies_in_Rostock__02.jpg"
-                                    class="cursor-ve absolute h-full w-full object-cover"
+                                    class="md:cursor-ve absolute h-full w-full object-cover"
                                 />
                             </a>
                         </div>
@@ -53,7 +57,7 @@
                     <!-- Image placeholders: Zaninelli_Jakobs_BROTHERLAND_04.jpg -->
                     <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear md:hover:grayscale-0">
                         <a href="virtual-exhibits/ve2.html" class="group">
-                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_04.jpg" class="cursor-ve object-cover" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_04.jpg" class="md:cursor-ve object-cover" />
                         </a>
                     </div>
                 </div>
@@ -97,7 +101,7 @@
                     <!-- Image placeholders:  -->
                     <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear md:hover:grayscale-0">
                         <a href="virtual-exhibits/ve2.html" class="group">
-                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_03.jpg" class="cursor-ve object-cover" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_03.jpg" class="md:cursor-ve object-cover" />
                         </a>
                     </div>
                 </div>
@@ -108,7 +112,7 @@
                     <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear md:hover:grayscale-0">
                         <!-- Image placeholders: -->
                         <a href="virtual-exhibits/ve2.html" class="group">
-                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_035.jpg" class="cursor-ve object-cover" />
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_035.jpg" class="md:cursor-ve object-cover" />
                         </a>
                     </div>
                 </div>
@@ -139,7 +143,11 @@
             </div>
             <div class="py-8 md:hidden">
                 <a href="virtual-exhibits/ve2.html">
-                    <img src="/public/images/virtAusstCursor.png" width="100%" />
+                    <div
+                        class="flex h-32 w-32 items-center justify-center rounded-full bg-gray-950 p-4 pt-3 text-center font-crimson-text leading-tight tracking-tight text-gray-200 hover:!text-white"
+                    >
+                        zur virtuellen Ausstellung
+                    </div>
                 </a>
             </div>
         </main>
