--- a/src/index.html
+++ b/src/index.html
@@ -5,25 +5,27 @@
     </head>
 
     <body class="bg-white text-black">
+        <!-- Include nav menu if mobile view: -->
         <header class="block md:hidden">
             <include src="./partials/nav.html" locals='{"pathPrefix": "./html", "active": "/"}'></include>
         </header>
 
-        <div class="flex flex-col-reverse items-center justify-start md:flex-row">
-            <div class="hidden md:block md:w-20"></div>
+        <div class="flex w-full flex-col-reverse items-center justify-start md:flex-row">
+            <div class="hidden md:block md:w-16"></div>
             <div class="relative aspect-2/3 md:h-screen">
                 <img src="../public/images/Zaninelli_Jakobs_BROTHERLAND_01.jpg" class="object-cover" />
             </div>
 
-            <div class="hidden flex-col justify-start pl-10 md:flex md:h-screen">
-                <div class="h-16"></div>
+            <!-- Desktop menu: -->
+            <div class="hidden h-full w-1/3 flex-col justify-start pl-10 md:flex">
+                <div class="h-12"></div>
 
-                <div class="font-roboto text-2xl font-medium uppercase text-gray-800 md:text-8xl">
-                    <div>Brother</div>
-                    <div>land</div>
-                </div>
+                <svg class="block fill-gray-800" width="100%" height="100%" viewBox="0 0 71 27" preserveAspectRatio="none">
+                    <text x="0" y="12" font-family="Roboto, Arial, Helvetica, sans-serif" font-weight="normal">BROTHER</text>
+                    <text x="0" y="26.5" font-family="Roboto, Arial, Helvetica, sans-serif" font-weight="normal">LAND</text>
+                </svg>
 
-                <div class="h-16"></div>
+                <div class="h-8"></div>
 
                 <nav class="min-w-fit font-crimson-text text-3xl font-medium">
                     <a href="./html/project.html" alt="Project">
