--- a/src/html/virtual-exhibits/ve3.html
+++ b/src/html/virtual-exhibits/ve3.html
@@ -191,7 +191,12 @@
                         </span>
                     </div>
                 </div>
-                <br />
+
+                <div class="-mx-0.5 flex items-center justify-end md:hidden">
+                    <a class="text-center font-crimson-text tracking-tight text-gray-100" href="./ve4.html">
+                        <div class="flex h-32 w-32 items-center justify-between rounded-full bg-gray-950 p-4">zur nächsten Seite</div>
+                    </a>
+                </div>
             </main>
         </div>
     </body>
