--- a/src/html/project.html
+++ b/src/html/project.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <head>
         <include src="./partials/head.html" locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - Projekt"}' />
@@ -141,6 +141,7 @@
                     <p>BROTHERLAND ist ein Projekt von <a href="./about.html">Martina Zaninelli und Thomas Jakobs</a></p>
                 </div>
             </div>
+
             <div class="py-8 md:hidden">
                 <a href="virtual-exhibits/ve2.html">
                     <div
