--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <head>
         <include src="./partials/head.html" locals='{"pathHeadPrefix": "./", "pageTitle": "Brotherland"}' />
@@ -20,7 +20,7 @@
             <div class="hidden h-full w-1/3 flex-col justify-start pl-10 md:flex">
                 <div class="h-12"></div>
 
-                <svg class="block fill-gray-800" width="100%" height="100%" viewBox="0 0 71 27" preserveAspectRatio="none">
+                <svg class="block fill-[rgb(51,_51,_51)]" width="100%" height="100%" viewBox="0 0 71 27" preserveAspectRatio="none">
                     <text x="0" y="12" font-family="Roboto, Arial, Helvetica, sans-serif" font-weight="normal">BROTHER</text>
                     <text x="0" y="26.5" font-family="Roboto, Arial, Helvetica, sans-serif" font-weight="normal">LAND</text>
                 </svg>
