--- a/src/html/virtual-exhibits/ve3.html
+++ b/src/html/virtual-exhibits/ve3.html
@@ -91,14 +91,14 @@
                     </div>
                 </div>
 
-                <div class="relative h-fit w-full md:pt-24">
+                <div class="relative h-fit w-full pt-8 md:pt-24">
                     <div class="w-full md:w-4/5 md:-translate-x-[10%]">
                         <span class="z-20 text-left font-roboto text-7xl font-medium text-red-700"
                             >DIE NEUE GRENZE WAR NICHT MEHR DIE MAUER, ES WAR DAS GELD</span
                         >
 
                         <!-- Audio "wir wollten das ja letzten endes" -->
-                        <div class="flex w-1/5 pt-2">
+                        <div class="flex w-3/5 md:w-1/5 md:pt-2">
                             <include
                                 src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/04_OT_05.mp3", "title": ""}'
@@ -108,7 +108,7 @@
                     </div>
                     <div class="relative -z-10 flex h-fit justify-center">
                         <div class="w-4/5 md:w-3/5">
-                            <!-- Nahaufnahme Interviewpartner -->
+                            <!-- Stein -->
                             <div class="aspect-2/3 w-full overflow-hidden md:-translate-y-[28%]">
                                 <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_017.jpg" class="object-cover" />
                             </div>
