--- a/src/html/virtual-exhibits/ve3.html
+++ b/src/html/virtual-exhibits/ve3.html
@@ -91,14 +91,17 @@
                     </div>
                 </div>
 
-                <div class="relative h-fit w-full pt-8 md:pt-24">
-                    <div class="w-full md:w-4/5 md:-translate-x-[10%]">
-                        <span class="z-20 text-left font-roboto text-7xl font-medium text-red-700"
+                <div class="relative mt-[-30%] h-fit w-full pt-8 sm:mt-[-15%] md:-mt-0 md:pt-24">
+                    <div class="z-20 w-full md:w-4/5">
+                        <span
+                            class="inline-block translate-y-1/2 text-left font-roboto text-7xl font-medium text-red-700 md:inline md:-translate-x-[10%] md:translate-y-0"
                             >DIE NEUE GRENZE WAR NICHT MEHR DIE MAUER, ES WAR DAS GELD</span
                         >
 
                         <!-- Audio "wir wollten das ja letzten endes" -->
-                        <div class="flex w-3/5 md:w-1/5 md:pt-2">
+                        <div
+                            class="absolute -bottom-[2.5%] left-1/2 flex w-3/5 -translate-x-1/2 md:static md:bottom-0 md:left-0 md:w-1/5 md:translate-x-0 md:pt-2"
+                        >
                             <include
                                 src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/04_OT_05.mp3", "title": ""}'
