--- a/src/html/virtual-exhibits/ve4.html
+++ b/src/html/virtual-exhibits/ve4.html
@@ -32,7 +32,7 @@
                         </div>
                     </div>
                     <div
-                        class="mx-auto flex h-fit w-3/5 justify-start md:absolute md:left-1/2 md:top-1/4 md:mx-0 md:w-2/5 md:-translate-x-1/2 md:-translate-y-1/4"
+                        class="mx-auto flex h-fit w-4/5 justify-start pt-8 md:absolute md:left-1/2 md:top-1/4 md:mx-0 md:w-2/5 md:-translate-x-1/2 md:-translate-y-1/4 md:pt-0"
                     >
                         <!-- Audio "die ganze Struktur zerbrach" -->
                         <include
@@ -44,7 +44,7 @@
                 </div>
 
                 <div class="flex h-fit w-full flex-col justify-between md:-my-20 md:flex-row lg:-my-32">
-                    <div class="flex w-3/5">
+                    <div class="flex w-3/5 md:w-full">
                         <div class="md:w-1/6"></div>
                         <div class="relative mx-auto h-full w-3/5 md:mx-0 md:w-full">
                             <!-- Audio "das nahm ja so überhand" -->
@@ -74,7 +74,7 @@
 
                         <!-- Audio "Besuch bekommen" -->
                         <div
-                            class="mx-auto w-3/5 md:absolute md:bottom-0 md:right-0 md:mx-0 md:w-1/3 md:translate-x-[5%] md:translate-y-1/2"
+                            class="mx-auto w-4/5 md:absolute md:bottom-0 md:right-0 md:mx-0 md:w-1/3 md:translate-x-[5%] md:translate-y-1/2"
                         >
                             <include
                                 src="./partials/interview_audio.html"
