--- a/src/html/virtual-exhibits/ve4.html
+++ b/src/html/virtual-exhibits/ve4.html
@@ -65,7 +65,7 @@
                 </div>
 
                 <div class="flex h-fit w-full">
-                    <div class="relative md:w-11/12 md:-translate-x-[5%]">
+                    <div class="relative pt-8 md:w-11/12 md:-translate-x-[5%] md:pt-0">
                         <!-- Scherben -->
                         <div class="mx-auto aspect-3/2 w-full md:mx-0">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_025.jpg" />
@@ -74,7 +74,7 @@
 
                         <!-- Audio "Besuch bekommen" -->
                         <div
-                            class="mx-auto w-4/5 md:absolute md:bottom-0 md:right-0 md:mx-0 md:w-1/3 md:translate-x-[5%] md:translate-y-1/2"
+                            class="mx-auto w-4/5 pt-10 md:absolute md:bottom-0 md:right-0 md:mx-0 md:w-1/3 md:translate-x-[5%] md:translate-y-1/2 md:pt-0"
                         >
                             <include
                                 src="./partials/interview_audio.html"
@@ -89,9 +89,9 @@
                     <span class="mx-auto block w-4/5 text-left md:mx-0 md:w-1/2 lg:w-1/3"
                         >Ich habe gesagt: „Keine Angst, wir sind versteckt in der Wohnung.</span
                     >
-                    <div class="w-full">
+                    <div class="mx-auto w-4/5 md:mx-0 md:w-full">
                         <span
-                            class="whitespace-nowrap font-roboto text-[6vw] font-medium leading-snug text-red-700 sm:text-[7.25vw] md:text-[6vw] lg:text-[5.375vw] xl:text-[4.9vw] 2xl:text-[4.45vw]"
+                            class="font-roboto text-[16vw] font-medium leading-none text-red-700 sm:text-[7.25vw] md:whitespace-nowrap md:text-[6vw] md:leading-snug lg:text-[5.375vw] xl:text-[4.9vw] 2xl:text-[4.45vw]"
                         >
                             WIR KOMMEN NICHT RAUS!
                         </span>
@@ -104,7 +104,7 @@
                     </span>
                 </div>
 
-                <div class="relative flex h-fit flex-col justify-between md:flex-row">
+                <div class="relative flex h-fit flex-col justify-between pt-8 md:flex-row md:pt-0">
                     <div class="w-full md:w-1/2">
                         <!-- Bus 1 -->
                         <div class="relative aspect-3/2 w-full md:-translate-y-2/3">
@@ -112,7 +112,7 @@
                             <span class="absolute w-full text-left text-xs"> mit freundlicher Genehmigung von Detlev Kennerth </span>
                         </div>
                     </div>
-                    <div class="w-full md:w-1/2">
+                    <div class="w-full pt-8 md:w-1/2 md:pt-0">
                         <!-- Bus 2 -->
                         <div class="relative aspect-3/2 w-full md:-translate-x-[10%]">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_027.jpg" class="object-cover" />
@@ -123,7 +123,7 @@
                     </div>
                 </div>
 
-                <div class="relative flex h-fit flex-col justify-between md:flex-row md:py-28">
+                <div class="relative flex h-fit flex-col justify-between pt-8 md:flex-row md:py-28 md:pt-0">
                     <div class="mx-auto w-4/5 md:mx-0 md:w-5/12 md:pb-52">
                         <!-- Flagge -->
                         <div class="aspect-2/3 w-full overflow-hidden">
@@ -131,14 +131,14 @@
                         </div>
                     </div>
 
-                    <div class="relative mx-auto w-4/5 md:mx-0 md:w-5/12 md:pt-52">
+                    <div class="relative mx-auto w-4/5 pt-8 md:mx-0 md:w-5/12 md:pt-52">
                         <!-- Sonnenblume -->
                         <div class="aspect-2/3 w-full overflow-hidden">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_029.jpg" />
                         </div>
 
                         <!-- Audio "Das wollten wir doch nicht" -->
-                        <div class="mx-auto w-3/5 md:absolute md:left-1/2 md:mx-0 md:w-5/6 md:-translate-x-1/2 md:-translate-y-1/2">
+                        <div class="mx-auto w-3/5 -translate-y-1/2 md:absolute md:left-1/2 md:mx-0 md:w-5/6 md:-translate-x-1/2">
                             <include
                                 src="./partials/interview_audio.html"
                                 locals='{"audioFilePath": "../../../public/audio/04_das_wollten_wir_doch_nicht.mp3", "title": "das wollten wir doch nicht"}'
@@ -151,14 +151,14 @@
                 <div class="flex h-fit flex-col justify-between md:flex-row">
                     <div class="flex w-full flex-col items-center justify-start md:w-[47%]">
                         <!-- Klatsch 1 -->
-                        <div class="relative aspect-[15/9] w-full">
+                        <div class="relative order-2 aspect-[15/9] w-full md:order-1">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_030.jpg" class="absolute object-cover" />
                         </div>
 
                         <div class="hidden md:block md:aspect-square md:w-full"></div>
 
                         <!-- Tischtennisplatte -->
-                        <div class="relative mt-auto flex h-full w-full flex-col justify-end">
+                        <div class="relative order-1 mt-auto flex h-full w-full flex-col justify-end pt-8 md:order-2 md:pt-0">
                             <div class="relative mx-auto aspect-2/3 w-4/5 overflow-hidden md:mx-0 md:w-11/12">
                                 <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_033.jpg" />
                             </div>
@@ -173,7 +173,7 @@
                         </div>
                     </div>
 
-                    <div class="relative flex w-full flex-col justify-start md:w-[47%]">
+                    <div class="relative flex w-full flex-col justify-start pt-8 md:w-[47%] md:pt-0">
                         <div class="hidden aspect-[15/9] w-full md:block"></div>
 
                         <!-- Klatsch 2 -->
