--- a/src/html/project.html
+++ b/src/html/project.html
@@ -14,14 +14,14 @@
             <div class="mb-10 flex flex-col items-center justify-between md:flex-row">
                 <div class="w-full text-left md:w-1/2 md:pr-4 lg:pr-8">
                     <p>
-                        Brotherland berichtet von einer Zeit, von der man schwer erzählen kann, ohne den Rassismus und die Gewalt sprachlich
+                        Brotherland berichtet von einer Zeit, von der man schwer erzählen kann, ohne den Rassismus und die Gewalt sprachlich
                         zu reproduzieren.
                     </p>
                     <p>
-                        Die Komplexität der Wendejahre und ihr Erbe wird durch die Kontextualisierung von Fotos, Archivmaterial und
+                        Die Komplexität der Wendejahre und ihr Erbe wird durch die Kontextualisierung von Fotos, Archivmaterial und
                         Portraits - verknüpft mit Interviews – dargestellt.
                     </p>
-                    <p>In den Interviews und Erzählungen der Zeitzeug:innen sind zum Teil rassistische und gewaltvolle Inhalte zu hören.</p>
+                    <p>In den Interviews und Erzählungen der Zeitzeug:innen sind zum Teil rassistische und gewaltvolle Inhalte zu hören.</p>
                 </div>
 
                 <div class="py-8 md:hidden">
