--- a/src/html/virtual-exhibits/ve2.html
+++ b/src/html/virtual-exhibits/ve2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <head>
         <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Virtual Exhibit 2"}' />
@@ -106,10 +106,10 @@
                         </div>
 
                         <!-- Audio unterhalb v. Schwimmbad -->
-                        <div class="hidden w-full translate-y-[195%] md:block">
+                        <div class="z-10 hidden w-full translate-y-[195%] md:block">
                             <include
                                 src="./partials/interview_audio.html"
-                                locals='{"audioFilePath": "../../../public/audio/04_ein_freundschaftliches_verhältnis.mp3", "title": "ein freundschaftliches Verhältnis"}'
+                                locals='{"audioFilePath": "../../../public/audio/04_ein_freundschaftliches_verhaeltnis.mp3", "title": "ein freundschaftliches Verhältnis"}'
                             >
                             </include>
                         </div>
