--- a/src/html/virtual-exhibits/ve3.html
+++ b/src/html/virtual-exhibits/ve3.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Virtual Exhibit 2"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Virtual Exhibit 3"}' />
     </head>
 
     <body class="bg-white">
@@ -91,7 +91,7 @@
                     </div>
                 </div>
 
-                <div class="relative mt-[-30%] h-fit w-full pt-8 sm:mt-[-15%] md:-mt-0 md:pt-24">
+                <div class="relative mt-[-60%] h-fit w-full pt-8 sm:mt-[-15%] md:-mt-0 md:pt-24">
                     <div class="z-20 w-full md:w-4/5">
                         <span
                             class="inline-block translate-y-1/2 text-left font-roboto text-7xl font-medium text-red-700 md:inline md:-translate-x-[10%] md:translate-y-0"
@@ -122,13 +122,15 @@
                 <div class="flex h-fit w-full flex-col pt-8 md:-mx-20 md:w-auto md:-translate-y-[25%] md:flex-row md:pt-0">
                     <div class="flex flex-col items-center justify-between md:basis-1/2 md:pr-20">
                         <!-- Fresse 1 -->
-                        <div class="relative aspect-3/2 w-full overflow-hidden md:-translate-y-[40%]">
+                        <div class="relative order-2 aspect-3/2 w-full overflow-hidden md:order-1 md:-translate-y-[40%]">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_018.jpg" class="object-cover" />
                             <span class="absolute w-full text-left text-xs">mit freundlicher Genehmigung von Christian Ditsch</span>
                         </div>
 
                         <!-- Text "Meine Arbeit nehmen die.."  -->
-                        <span class="w-4/5 pt-8 md:w-10/12 md:translate-x-[20%] md:translate-y-full md:pt-0">
+                        <span
+                            class="order-1 w-4/5 pb-4 pt-8 md:order-2 md:w-10/12 md:translate-x-[20%] md:translate-y-full md:pb-0 md:pt-0"
+                        >
                             Dass Deutschland einig wird, das hört man schon '89 … vom Fernsehen und von der Straße, die Deutschen
                             unterhalten sich manchmal. Ich hatte dafür keinen Kopf … Ich war jetzt arbeitslos, ich musste irgendwas
                             versuchen, um weiter Geld zu verdienen. Was ist mit mir jetzt, gehe ich nach Hause [Vietnam] oder gehe ich
@@ -151,7 +153,7 @@
                     </div>
                 </div>
 
-                <div class="flex h-fit w-full flex-col pt-8 md:-mx-20 md:w-auto md:translate-y-[3%] md:flex-row md:pt-0">
+                <div class="flex h-fit w-full translate-y-[7.5%] flex-col pt-8 md:-mx-20 md:w-auto md:translate-y-[3%] md:flex-row md:pt-0">
                     <div class="flex w-full flex-col items-center justify-between md:w-[45%] md:pr-12">
                         <div class="mt-auto md:h-[70%]"></div>
 
@@ -164,14 +166,16 @@
                     </div>
 
                     <div class="flex w-full flex-col justify-between pt-8 md:-mr-8 md:w-[55%] md:pl-8 md:pt-24">
-                        <div class="relative">
+                        <div class="relative flex flex-col md:flex-row">
                             <!-- Bauzaun -->
                             <div class="mx-auto aspect-2/3 w-4/5 overflow-hidden md:mx-0 md:w-full">
                                 <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_021.jpg" class="object-cover" />
                             </div>
 
-                            <div class="z-20 mx-auto h-full pt-8 md:absolute md:top-0 md:w-full md:translate-y-2/3 md:pt-0">
-                                <!-- Audio "wich dachte ihr seid schon weg" -->
+                            <div
+                                class="z-20 mx-auto h-full -translate-y-[620%] pt-8 md:absolute md:top-0 md:w-full md:translate-y-3/4 md:pt-0"
+                            >
+                                <!-- Audio "ich dachte ihr seid schon weg" -->
                                 <div class="m-auto flex w-2/3">
                                     <include
                                         src="./partials/interview_audio.html"
@@ -182,7 +186,7 @@
                             </div>
                         </div>
 
-                        <span class="mx-auto w-4/5 pt-6 text-left md:pt-32">
+                        <span class="mx-auto w-4/5 -translate-y-1/4 text-left md:translate-y-0 md:pt-32">
                             Du warst als Erzieherin nicht mehr anerkannt. Das fand ich schon sehr prägend. Dann kamen wirklich welche von
                             drüben und haben uns erst mal geschult. Wir mussten praktisch die Ausbildung noch mal neu machen, damit wir
                             überhaupt weiter arbeiten durften. Das fand ich so echt prägend und auch … auch so verletzend. Wir hatten ja
