--- a/src/html/virtual-exhibits/ve4.html
+++ b/src/html/virtual-exhibits/ve4.html
@@ -13,12 +13,12 @@
             <!-- Hover links -->
             <div class="pointer-events-none absolute hidden h-full w-full md:block">
                 <a
-                    class="cursor-ve-prev pointer-events-auto absolute left-0 top-0 z-50 h-full sm:w-1/12 md:w-[10%] lg:w-1/6 xl:w-1/5 2xl:w-1/4"
+                    class="cursor-ve-prev pointer-events-auto absolute left-0 top-0 z-50 h-full md:w-[7.5%] lg:w-[10%] xl:w-[15%] 2xl:w-1/5"
                     href="./ve3.html"
                 ></a>
 
                 <a
-                    class="cursor-ve-next pointer-events-auto absolute right-0 top-0 z-50 h-full sm:w-1/12 md:w-[10%] lg:w-1/6 xl:w-1/5 2xl:w-1/4"
+                    class="cursor-ve-next pointer-events-auto absolute right-0 top-0 z-50 h-full md:w-[7.5%] lg:w-[10%] xl:w-[15%] 2xl:w-1/5"
                     href="./ve2.html"
                 ></a>
             </div>
@@ -44,7 +44,7 @@
                 </div>
 
                 <div class="flex h-fit w-full flex-col justify-between md:-my-20 md:flex-row lg:-my-32">
-                    <div class="flex w-3/5 md:w-full">
+                    <div class="order-2 mx-auto flex w-3/5 pt-2 md:order-1 md:mx-0 md:w-full md:pt-0">
                         <div class="md:w-1/6"></div>
                         <div class="relative mx-auto h-full w-3/5 md:mx-0 md:w-full">
                             <!-- Audio "das nahm ja so überhand" -->
@@ -59,7 +59,7 @@
                     </div>
 
                     <!-- Plattenbau-->
-                    <div class="relative z-10 mx-auto aspect-2/3 w-4/5 overflow-hidden object-cover md:mx-0 md:w-2/5">
+                    <div class="z-10 order-1 mx-auto aspect-2/3 w-4/5 overflow-hidden object-cover md:order-2 md:mx-0">
                         <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_024.jpg" />
                     </div>
                 </div>
@@ -151,19 +151,21 @@
                 <div class="flex h-fit flex-col justify-between md:flex-row">
                     <div class="flex w-full flex-col items-center justify-start md:w-[47%]">
                         <!-- Klatsch 1 -->
-                        <div class="relative order-2 aspect-[15/9] w-full md:order-1">
+                        <div class="relative order-2 aspect-[15/9] w-full md:order-1 md:-translate-y-[175%]">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_030.jpg" class="absolute object-cover" />
                         </div>
 
                         <div class="hidden md:block md:aspect-square md:w-full"></div>
 
                         <!-- Tischtennisplatte -->
-                        <div class="relative order-1 mt-auto flex h-full w-full flex-col justify-end pt-8 md:order-2 md:pt-0">
+                        <div class="relative order-1 mt-auto flex h-full w-full flex-col justify-end pt-4 md:order-2 md:pt-0">
                             <div class="relative mx-auto aspect-2/3 w-4/5 overflow-hidden md:mx-0 md:w-11/12">
                                 <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_033.jpg" />
                             </div>
                             <!-- Audio "ich dachte ihr seid schon weg" -->
-                            <div class="mx-auto w-3/5 md:absolute md:-right-[7%] md:bottom-0 md:mx-0 md:w-1/3 md:-translate-y-[160%]">
+                            <div
+                                class="mx-auto w-3/5 pt-2 md:absolute md:-right-[7%] md:bottom-0 md:mx-0 md:w-1/3 md:-translate-y-[160%] md:pt-0"
+                            >
                                 <include
                                     src="./partials/interview_audio.html"
                                     locals='{"audioFilePath": "../../../public/audio/05_A_D_08.mp3", "title": ""}'
@@ -202,7 +204,7 @@
                     </div>
                 </div>
 
-                <div class="md:h-20"></div>
+                <div class="h-12 md:h-20"></div>
 
                 <video class="mx-auto w-full md:w-4/5" controls>
                     <source src="/public/videos/Zaninelli_Jakobs_Video_VAS4.mp4" />
