--- a/src/index.html
+++ b/src/index.html
@@ -29,19 +29,19 @@
 
                 <nav class="min-w-fit font-crimson-text text-3xl font-medium">
                     <a href="./html/project.html" alt="Project">
-                        <div class="py-1 pl-1 transition-colors ease-linear hover:underline">Projekt</div>
+                        <div class="py-1 pl-1 text-[rgb(51,_51,_51)] transition-colors ease-linear hover:underline">Projekt</div>
                     </a>
                     <a href="./html/interviews/intrvw_dhn01.html" alt="Interviews">
-                        <div class="py-1 pl-1 transition-colors ease-linear hover:underline">Interviews</div>
+                        <div class="py-1 pl-1 text-[rgb(51,_51,_51)] transition-colors ease-linear hover:underline">Interviews</div>
                     </a>
                     <a href="./html/book.html" alt="Book">
-                        <div class="py-1 pl-1 transition-colors ease-linear hover:underline">Buch</div>
+                        <div class="py-1 pl-1 text-[rgb(51,_51,_51)] transition-colors ease-linear hover:underline">Buch</div>
                     </a>
                     <a href="./html/exhibits.html" alt="Exhibits">
-                        <div class="py-1 pl-1 transition-colors ease-linear hover:underline">Ausstellungen</div>
+                        <div class="py-1 pl-1 text-[rgb(51,_51,_51)] transition-colors ease-linear hover:underline">Ausstellungen</div>
                     </a>
                     <a href="./html/about.html" alt="About">
-                        <div class="py-1 pl-1 transition-colors ease-linear hover:underline">Über uns</div>
+                        <div class="py-1 pl-1 text-[rgb(51,_51,_51)] transition-colors ease-linear hover:underline">Über uns</div>
                     </a>
                 </nav>
             </div>
