bobbels, verrutschte elemente, buch bild

--- a/src/html/book.html
+++ b/src/html/book.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <head>
         <include src="./partials/head.html" locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - Buch"}' />
@@ -11,8 +11,8 @@
 
         <main class="m-auto font-crimson-text text-lg font-semibold tracking-tight">
             <div class="flex flex-col items-center justify-start">
-                <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_buch.jpg" class="h-fit w-80" />
-                <div>Ein Foto-Text-Buch mit mehr Interviews, Fotos und Archivmaterial ist in Arbeit.</div>
+                <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_700px_buch.jpg" class="h-fit w-4/5" />
+                <div class="py-8">Ein Foto-Text-Buch mit mehr Interviews, Fotos und Archivmaterial ist in Arbeit.</div>
             </div>
         </main>
     </body>
