--- a/src/html/virtual-exhibits/ve3.html
+++ b/src/html/virtual-exhibits/ve3.html
@@ -168,13 +168,11 @@
                     <div class="flex w-full flex-col justify-between pt-8 md:-mr-8 md:w-[55%] md:pl-8 md:pt-24">
                         <div class="relative flex flex-col md:flex-row">
                             <!-- Bauzaun -->
-                            <div class="mx-auto aspect-2/3 w-4/5 overflow-hidden md:mx-0 md:w-full">
+                            <div class="order-2 mx-auto aspect-2/3 w-4/5 overflow-hidden md:order-1 md:mx-0 md:w-full">
                                 <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_021.jpg" class="object-cover" />
                             </div>
 
-                            <div
-                                class="z-20 mx-auto h-full -translate-y-[620%] pt-8 md:absolute md:top-0 md:w-full md:translate-y-3/4 md:pt-0"
-                            >
+                            <div class="z-20 order-1 mx-auto h-full md:absolute md:top-0 md:order-2 md:w-full md:translate-y-3/4">
                                 <!-- Audio "ich dachte ihr seid schon weg" -->
                                 <div class="m-auto flex w-2/3">
                                     <include
@@ -186,7 +184,7 @@
                             </div>
                         </div>
 
-                        <span class="mx-auto w-4/5 -translate-y-1/4 text-left md:translate-y-0 md:pt-32">
+                        <span class="mx-auto w-4/5 pt-8 text-left md:pt-32">
                             Du warst als Erzieherin nicht mehr anerkannt. Das fand ich schon sehr prägend. Dann kamen wirklich welche von
                             drüben und haben uns erst mal geschult. Wir mussten praktisch die Ausbildung noch mal neu machen, damit wir
                             überhaupt weiter arbeiten durften. Das fand ich so echt prägend und auch … auch so verletzend. Wir hatten ja
@@ -199,7 +197,10 @@
                     </div>
                 </div>
 
-                <div class="-mx-0.5 flex items-center justify-end md:hidden">
+                <div class="-mx-0.5 flex translate-y-[130%] items-center justify-between md:hidden">
+                    <a class="text-center font-crimson-text tracking-tight text-gray-100" href="./ve2.html">
+                        <div class="flex h-32 w-32 items-center justify-between rounded-full bg-gray-950 p-4">zur vorherigen Seite</div>
+                    </a>
                     <a class="text-center font-crimson-text tracking-tight text-gray-100" href="./ve4.html">
                         <div class="flex h-32 w-32 items-center justify-between rounded-full bg-gray-950 p-4">zur nächsten Seite</div>
                     </a>
