--- a/src/html/virtual-exhibits/ve4.html
+++ b/src/html/virtual-exhibits/ve4.html
@@ -151,8 +151,11 @@
                 <div class="flex h-fit flex-col justify-between md:flex-row">
                     <div class="flex w-full flex-col items-center justify-start md:w-[47%]">
                         <!-- Klatsch 1 -->
-                        <div class="relative order-2 aspect-[15/9] w-full md:order-1 md:-translate-y-[175%]">
-                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_030.jpg" class="absolute object-cover" />
+                        <div class="relative order-2 aspect-[15/9] w-full md:order-1 md:-translate-y-[110%]">
+                            <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_030.jpg" class="object-cover" />
+                            <div class="absolute bottom-0 z-10 w-full translate-y-full overflow-visible text-right text-xs">
+                                mit freundlicher Genehmigung von Detlev Kennerth
+                            </div>
                         </div>
 
                         <div class="hidden md:block md:aspect-square md:w-full"></div>
@@ -179,8 +182,11 @@
                         <div class="hidden aspect-[15/9] w-full md:block"></div>
 
                         <!-- Klatsch 2 -->
-                        <div class="relative aspect-3/2 w-full md:pb-8">
+                        <div class="relative aspect-3/2 w-full pb-0 md:pb-8">
                             <img src="/public/images/Zaninelli_Jakobs_BROTHERLAND_031.jpg" />
+                            <div class="absolute z-10 w-full overflow-visible text-right text-xs">
+                                mit freundlicher Genehmigung von Detlev Kennerth
+                            </div>
                         </div>
 
                         <!-- Klatsch 3 -->
@@ -212,6 +218,12 @@
                 </video>
 
                 <div class="md:h-20"></div>
+
+                <div class="-mx-0.5 flex translate-y-[120%] items-center justify-start md:hidden">
+                    <a class="text-center font-crimson-text tracking-tight text-gray-100" href="./ve3.html">
+                        <div class="flex h-32 w-32 items-center justify-between rounded-full bg-gray-950 p-4">zur vorherigen Seite</div>
+                    </a>
+                </div>
             </main>
         </div>
     </body>
