--- a/src/html/interviews/intrvw_ajm01.html
+++ b/src/html/interviews/intrvw_ajm01.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <script locals>
         module.exports = {
@@ -15,7 +15,7 @@
                 imageFilePath: "/public/images/AJM_01.jpg",
                 imageCaption: "VEB Fleischkombinat Berlin, 1985. Aus dem Archiv von Ibraimo Alberto",
                 additionalContext: "",
-                prevLink: "intrvw_dhn01.html",
+                prevLink: "intrvw_mm04.html",
                 nextLink: "intrvw_ajm02.html",
             },
         };
