--- a/src/html/interviews/intrvw_dhn01.html
+++ b/src/html/interviews/intrvw_dhn01.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <script locals>
         module.exports = {
@@ -15,7 +15,7 @@
                 imageCaption: "Karl-Marx-Stadt jetzt Chemnitz, 1979. Bildcredit: Bundesarchiv, Bild 183-U0530-0019 / CC-BY-SA 3.0",
                 additionalContext: "",
                 prevLink: "intrvw_mm03.html",
-                nextLink: "intrvw_ajm01.html",
+                nextLink: "intrvw_mm04.html",
             },
         };
     </script>
