--- a/src/html/interviews/intrvw_ia02.html
+++ b/src/html/interviews/intrvw_ia02.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <script locals>
         module.exports = {
@@ -15,7 +15,7 @@
                     "Neonazis auf einer Montagsdemonstration in Leipzig, 1990. Bildcredit: Bundesarchiv, Bild 183-1990-0115-032 / Kluge, Wolfgang /CC-BY-SA 3.0",
                 additionalContext: "",
                 prevLink: "intrvw_ot01.html",
-                nextLink: "intrvw_ot03.html",
+                nextLink: "intrvw_a_d01.html",
             },
         };
     </script>
