--- a/src/html/interviews/intrvw_mm04.html
+++ b/src/html/interviews/intrvw_mm04.html
@@ -5,25 +5,14 @@
             text: {
                 title: "die kannten keine Schwarzen",
                 main: [
-                    `Aber unser Alltag in der Stadt, mit den Leuten zu treffen, war
-sehr, sehr merkwürdig, weil die Leuten kannten uns nicht, die
-kannten keine Schwarzen. Wir waren die ersten Afrikaner, die in
-der Stadt gewesen sind, die haben uns sooo angeguckt. Für uns
-war auch erstaunlich, wenn wir in die Schule gegangen sind, mit
-Schulkameraden war alles gut, aber wenn wir rauskommen, wo
-viele Leute sind, unsere Kollegen konnten nicht mehr mit uns
-sprechen. Das war für uns anders, wir kannten so was nicht. […]
-Das war merkwürdig.
-
-[…] In Angola wohnen wir auch mit Europäern: Die Portugiesen
-sind da. Wir haben kein Problem, manche haben Familie gegründet,
-wir leben alle zusammen, wir kennen kein Rassismus. Und wenn
-man jetzt in ein Land kommt, wird anders geguckt, weil du schwarz
-bist. Manchmal, wenn du im Bus sitzt, zwei Plätze [frei], aber wenn
-du zuerst sitzt, auf die andere Seite setzt sich keiner mehr hin, bleibt
-leer, aber der Bus ist voll. Aber das alles mussten wir ertragen.
-[…] Man merkt: „Ich bin hier jetzt nicht erwünscht“. So war unser
-Alltag.`,
+                    `Aber unser Alltag in der Stadt, mit den Leuten zu treffen, war sehr, sehr merkwürdig, weil die Leuten kannten uns nicht, die kannten keine Schwarzen.
+					Wir waren die ersten Afrikaner, die in der Stadt gewesen sind, die haben uns sooo angeguckt.
+					Für uns war auch erstaunlich, wenn wir in die Schule gegangen sind, mit Schulkameraden war alles gut, aber wenn wir rauskommen, wo viele Leute sind, unsere Kollegen konnten nicht mehr mit uns sprechen. 
+					Das war für uns anders, wir kannten so was nicht. […] Das war merkwürdig.
+					[…] In Angola wohnen wir auch mit Europäern: Die Portugiesen sind da. 
+					Wir haben kein Problem, manche haben Familie gegründet, wir leben alle zusammen, wir kennen kein Rassismus. Und wenn man jetzt in ein Land kommt, wird anders geguckt, weil du schwarz bist. 
+					Manchmal, wenn du im Bus sitzt, zwei Plätze [frei], aber wenn du zuerst sitzt, auf die andere Seite setzt sich keiner mehr hin, bleibt leer, aber der Bus ist voll.
+					Aber das alles mussten wir ertragen. […] Man merkt: „Ich bin hier jetzt nicht erwünscht“. So war unser Alltag.`,
                 ],
                 author: "Moises Mvuama",
                 authorLink: "../bio.html#mvuama",
@@ -38,12 +27,12 @@ Alltag.`,
     </script>
 
     <head>
-        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Moises Mvuama 3"}' />
+        <include src="./partials/head.html" locals='{"pathHeadPrefix": "../../", "pageTitle": "Brotherland - Moises Mvuama 4"}' />
     </head>
 
     <body class="bg-white text-gray-700" onload="setParentElementHeight('interview-info'); imageHref('interview-image');">
         <header>
-            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_mm03"}'></include>
+            <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_mm04"}'></include>
         </header>
 
         <main>
