--- a/src/html/interviews/intrvw_ot03.html
+++ b/src/html/interviews/intrvw_ot03.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <script locals>
         module.exports = {
@@ -13,7 +13,7 @@
                 imageFilePath: "/public/images/OT_03.jpg",
                 imageCaption: "Hoyerswerda, 1960. Bildcredit: Bundesarchiv, Bild 183-75760-0006 / CC-BY-SA 3.0",
                 additionalContext: "",
-                prevLink: "intrvw_ia02.html",
+                prevLink: "intrvw_a_d01.html",
                 nextLink: "intrvw_mm01.html",
             },
         };
