--- a/src/html/interviews/intrvw_ajm03.html
+++ b/src/html/interviews/intrvw_ajm03.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <script locals>
         module.exports = {
@@ -15,7 +15,7 @@
                 imageCaption: "Rückkehr nach Angola, Eberswalde 1990. Aus dem Archiv von Augusto Jone Munjunga",
                 additionalContext: "",
                 prevLink: "intrvw_mm01.html",
-                nextLink: "intrvw_dm02.html",
+                nextLink: "intrvw_a_d03.html",
             },
         };
     </script>
