--- a/src/html/interviews/intrvw_dm01.html
+++ b/src/html/interviews/intrvw_dm01.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <script locals>
         module.exports = {
@@ -16,7 +16,7 @@
                 additionalContext:
                     "Im September 1991 wurden in Hoyerswerda tagelang ein Wohnheim für Vertragsarbeiter:innen (Albert-Schweitzer-Straße) und eine Geflüchtetenunterkunft (Thomas-Müntzer-Straße) angegriffen. Zeitweise standen bis zu 500 Personen vor den Heimen und beteiligten sich an den Angriffen.",
                 prevLink: "intrvw_ajm04.html",
-                nextLink: "intrvw_jr02.html",
+                nextLink: "intrvw_a_d08.html",
             },
         };
     </script>
