--- a/src/html/interviews/intrvw_jr02.html
+++ b/src/html/interviews/intrvw_jr02.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <script locals>
         module.exports = {
@@ -16,8 +16,8 @@
                 imageFilePath: "/public/images/J_R_02.png",
                 imageCaption: 'Filmstill aus "The Truth Lies in Rostock/Spectacle"',
                 additionalContext: "",
-                prevLink: "intrvw_dm01.html",
-                nextLink: "intrvw_ls01.html",
+                prevLink: "intrvw_a_d08.html",
+                nextLink: "intrvw_a_d06.html",
             },
         };
     </script>
