--- a/src/html/interviews/intrvw_ls01.html
+++ b/src/html/interviews/intrvw_ls01.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <script locals>
         module.exports = {
@@ -15,7 +15,7 @@
                 imageCaption: 'Filmstill aus "The Truth Lies in Rostock"',
                 additionalContext:
                     "August 1992: In Rostock-Lichtenhagen wurden das Wohnheim ehemaliger vietnamesischer Vertragsarbeiter:innen und die „Zentrale Aufnahmestelle für Asylbewerber“ angegriffen. Steine und Molotow-Cocktails flogen gegen die Gebäude und auf die Menschen in ihnen. An diesem Pogrom beteiligten sich mehrere hundert Neonazis und bis zu 3.000 applaudierende Zuschauer:innen.",
-                prevLink: "intrvw_jr02.html",
+                prevLink: "intrvw_a_d06.html",
                 nextLink: "intrvw_jr03.html",
             },
         };
