--- a/src/html/interviews/intrvw_mm01.html
+++ b/src/html/interviews/intrvw_mm01.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <script locals>
         module.exports = {
@@ -14,7 +14,7 @@
                 imageFilePath: "/public/images/MM_01.jpg",
                 imageCaption: "CDU-Wahlplakat, Stadtwahl Bremen, 1991. Bildcredit: KAS/ACDP 10-005 : 602 CC-BY-SA 3.0 DE",
                 additionalContext: "",
-                prevLink: "intrvw_ot03.html",
+                prevLink: "intrvw_a_d02.html",
                 nextLink: "intrvw_ajm03.html",
             },
         };
