--- a/src/html/interviews/intrvw_ot03.html
+++ b/src/html/interviews/intrvw_ot03.html
@@ -14,7 +14,7 @@
                 imageCaption: "Hoyerswerda, 1960. Bildcredit: Bundesarchiv, Bild 183-75760-0006 / CC-BY-SA 3.0",
                 additionalContext: "",
                 prevLink: "intrvw_a_d01.html",
-                nextLink: "intrvw_mm01.html",
+                nextLink: "intrvw_a_d02.html",
             },
         };
     </script>
