--- a/src/html/virtual-exhibits/ve4.html
+++ b/src/html/virtual-exhibits/ve4.html
@@ -223,6 +223,9 @@
                     <a class="text-center font-crimson-text tracking-tight text-gray-100" href="./ve3.html">
                         <div class="flex h-32 w-32 items-center justify-between rounded-full bg-gray-950 p-4">zur vorherigen Seite</div>
                     </a>
+                    <a class="hidden text-center font-crimson-text tracking-tight text-gray-100" href="./ve5.html">
+                        <div class="flex h-32 w-32 items-center justify-between rounded-full bg-gray-950 p-4">zur nächsten Seite</div>
+                    </a>
                 </div>
             </main>
         </div>
