--- a/src/html/interviews/intrvw_ot01.html
+++ b/src/html/interviews/intrvw_ot01.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
     <script locals>
         module.exports = {
             text: {
-                title: "es war nicht böse gemeint",
+                title: "du hattest ja gar nicht die Möglichkeit",
                 main: [
                     `Du hattest ja gar nicht die Möglichkeit, sich kulturell miteinander irgendwo vertraut zu machen, dass die die Möglichkeit haben, sich an unsere Kultur zu gewöhnen und wir an ihre, das Verständnis einfach da ist für einander. Die wurden dann sicherlich abgestempelt alle, weil wenn was passiert ist … und wir sind vielleicht sicherlich auch von denen abgestempelt … einer verallgemeinert dann ganz schnell. Es gab so ein Begriff, der war auch nicht böse gemeint … na ja heute ist es sowieso ein bisschen schwierig. Viele haben „Schningschnongs“ gesagt. Es gab weitere verschiedene Begriffe zum Beispiel „Fidschis“. Es klingt jetzt ganz schlimm, aber irgendwie war es nicht böse gemeint. Für uns gab es auch viele Begriffe. Die Vietnamesen hat man einfach als fleißig und irgendwie nicht so auffällig wahrgenommen. Die wurden nicht so negativ behaftet wie vielleicht die Mosambikaner oder so.`,
                 ],
